added spanish and japanese pages

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -418,7 +418,7 @@
                   <img src="images/category-thumb-3.jpg" class="rounded-circle" alt="Category Thumbnail">
                   <h4 class="fs-6 mt-3 fw-normal category-title">English</h4>
                 </a>
-                <a href="category.html" class="nav-link swiper-slide text-center">
+                <a href="spanish.html" class="nav-link swiper-slide text-center">
                   <img src="images/category-thumb-4.jpg" class="rounded-circle" alt="Category Thumbnail">
                   <h4 class="fs-6 mt-3 fw-normal category-title">Spanish</h4>
                 </a>
