--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -410,11 +410,11 @@
                   <img src="images/category-thumb-1.jpg" class="rounded-circle" alt="Category Thumbnail">
                   <h4 class="fs-6 mt-3 fw-normal category-title">Arabic</h4>
                 </a>
-                <a href="category.html" class="nav-link swiper-slide text-center">
+                <a href="chinese.html" class="nav-link swiper-slide text-center">
                   <img src="images/category-thumb-2.jpg" class="rounded-circle" alt="Category Thumbnail">
                   <h4 class="fs-6 mt-3 fw-normal category-title">Chinese</h4>
                 </a>
-                <a href="category.html" class="nav-link swiper-slide text-center">
+                <a href="english.html" class="nav-link swiper-slide text-center">
                   <img src="images/category-thumb-3.jpg" class="rounded-circle" alt="Category Thumbnail">
                   <h4 class="fs-6 mt-3 fw-normal category-title">English</h4>
                 </a>
@@ -422,7 +422,7 @@
                   <img src="images/category-thumb-4.jpg" class="rounded-circle" alt="Category Thumbnail">
                   <h4 class="fs-6 mt-3 fw-normal category-title">Spanish</h4>
                 </a>
-                <a href="category.html" class="nav-link swiper-slide text-center">
+                <a href="japanese.html" class="nav-link swiper-slide text-center">
                   <img src="images/category-thumb-5.jpg" class="rounded-circle" alt="Category Thumbnail">
                   <h4 class="fs-6 mt-3 fw-normal category-title">Japanese</h4>
                 </a>
