--- a/src/main/resources/static/chinese.html
+++ b/src/main/resources/static/chinese.html
@@ -5,5 +5,8 @@
 
     <body>
         <h1>THIS IS THE CHINESE PAGE</h1>
+        <script src="/js/chinese.js"></script>
+
+    
     </body>
 </html>
