--- a/src/main/resources/static/japanese.html
+++ b/src/main/resources/static/japanese.html
@@ -4,6 +4,7 @@
     </head>
 
     <body>
-        <h1>THIS IS THE JAPANESE PAGE</h1>
+        <h1>THIS IS THE Japanese PAGE</h1>
+        <script src="/js/japanese.js"></script>
     </body>
 </html>
