--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -426,17 +426,17 @@
           <div class="col-md-12">
             <div class="category-carousel swiper">
               <div class="swiper-wrapper">
-                <a href="category.html" class="nav-link swiper-slide text-center">
-                  <img src="images/category-thumb-1.jpg" class="rounded-circle" alt="Category Thumbnail">
-                  <h4   class="fs-6 mt-3 fw-normal category-title">Arabic</h4>
+                <a href="brianwiles.html" class="nav-link swiper-slide text-center">
+                  <img src="images/brian_wiles.jpg" class="rounded-circle" alt="Category Thumbnail">
+                  <h4   class="fs-6 mt-3 fw-normal category-title">Brian Wiles</h4>
                 </a>
-                <a href="category.html" class="nav-link swiper-slide text-center">
-                  <img src="images/category-thumb-2.jpg" class="rounded-circle" alt="Category Thumbnail">
-                  <h4 class="fs-6 mt-3 fw-normal category-title">Chinese</h4>
+                <a href="lilihao.html" class="nav-link swiper-slide text-center">
+                  <img src="images/Lili_hao.jpg" class="rounded-circle" alt="Category Thumbnail">
+                  <h4 class="fs-6 mt-3 fw-normal category-title">Lili Hao</h4>
                 </a>
-                <a href="category.html" class="nav-link swiper-slide text-center">
-                  <img src="images/category-thumb-3.jpg" class="rounded-circle" alt="Category Thumbnail">
-                  <h4 class="fs-6 mt-3 fw-normal category-title">English</h4>
+                <a href="emma.html" class="nav-link swiper-slide text-center">
+                  <img src="images/emma.jpg" class="rounded-circle" alt="Category Thumbnail">
+                  <h4 class="fs-6 mt-3 fw-normal category-title">Emma</h4>
                 </a>
                 <a href="category.html" class="nav-link swiper-slide text-center">
                   <img src="images/category-thumb-4.jpg" class="rounded-circle" alt="Category Thumbnail">
