--- a/src/main/resources/static/test.html
+++ b/src/main/resources/static/test.html
@@ -157,12 +157,14 @@
 <script>
 
 async function getresponse(){
+  var selectorOpt = document.getElementById("languages");
+  var  selectorLang = selectorOpt.options[selectorOpt.selectedIndex].text;
   const inputText = document.getElementById("testinput").value;
   console.log(inputText);
 
   let input = 'http://localhost:8080/api/v1/llm'.concat("/")
-  .concat('translate ').concat(inputText).concat(' to arabic');
-  
+  .concat('translate ').concat(inputText).concat(' to ').concat(selectorLang);
+
   let aiResponse = fetch(input).then(res => {
   var reader = res.body.getReader();
 
