changed the phone icon for the app and adjusted the perks column underneath

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -81,6 +81,9 @@
                   <li><a href="spanish.html" class="dropdown-item">Spanish</a></li>
                 </ul>
               </li>
+              <li class="nav-item active">
+                <a href="test.html" class="nav-link">Translator</a>
+              </li>
             </ul>
           </div>
           
@@ -249,7 +252,7 @@
                 <div class="section-header">
                   <h2 class="section-title display-5 text-black">What is on your mind?</h2>
                 </div>
-                <p>Let us know if you have any queries!</p>
+                <h6 style="color: #ffffff;">Let us know if you have any queries!</h6>
               </div>
               <div class="col-md-5 p-3">
                 <form>
@@ -263,7 +266,7 @@
                     <input type="email" class="form-control form-control-md rounded-0" name="email" id="email" placeholder="Email Address">
                   </div>
                   <div class="mb-3">
-                    <label style="color: #ffffff;" for="exampleFormControlTextarea1">Your query here:</label>
+                    <label for="exampleFormControlTextarea1">Your query here:</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                   </div>
                   <div class="d-grid gap-2">
@@ -285,7 +288,7 @@
           <div class="container">
             <div class="row justify-content-center align-items-center">
               <div class="col-md-4">
-                <h2 class="mt-5">Download Organic App</h2>
+                <h2 class="mt-5">Download Language Learning Platform App</h2>
                 <p>Online Orders made easy, fast and reliable</p>
                 <div class="d-flex gap-2 flex-wrap mb-5">
                   <a href="#" title="App store"><img src="images/img-app-store.png" alt="app-store"></a>
@@ -293,7 +296,7 @@
                 </div>
               </div>
               <div class="col-md-5">
-                <img src="images/banner-onlineapp.png" alt="phone" class="img-fluid">
+                <img src="images/handphone.png" alt="phone" class="img-fluid">
               </div>
             </div>
           </div>
@@ -312,8 +315,8 @@
                 <svg width="32" height="32"><use xlink:href="#package"></use></svg>
               </div>
               <div class="card-body p-0">
-                <h5>Free delivery</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
+                <h5>Instant perks</h5>
+                <p class="card-text">Joining our lovely platform as user or a tutor will unlock many amazing perks</p>
               </div>
             </div>
           </div>
@@ -324,7 +327,7 @@
               </div>
               <div class="card-body p-0">
                 <h5>100% secure payment</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
+                <p class="card-text">Our gold members can be assured that our website is secure</p>
               </div>
             </div>
           </div>
@@ -334,8 +337,8 @@
                 <svg width="32" height="32"><use xlink:href="#quality"></use></svg>
               </div>
               <div class="card-body p-0">
-                <h5>Quality guarantee</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
+                <h5>Track progress</h5>
+                <p class="card-text">You can track your journey and see how far you have come!!</p>
               </div>
             </div>
           </div>
@@ -345,7 +348,7 @@
                 <svg width="32" height="32"><use xlink:href="#savings"></use></svg>
               </div>
               <div class="card-body p-0">
-                <h5>guaranteed savings</h5>
+                <h5></h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
               </div>
             </div>
@@ -356,8 +359,8 @@
                 <svg width="32" height="32"><use xlink:href="#offers"></use></svg>
               </div>
               <div class="card-body p-0">
-                <h5>Daily offers</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
+                <h5>Collect points and WIN!!</h5>
+                <p class="card-text">The more you learn, the more points you collect, you can use them on perks or to refer a friend for free</p>
               </div>
             </div>
           </div>
