--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -348,8 +348,8 @@
                 <svg width="32" height="32"><use xlink:href="#savings"></use></svg>
               </div>
               <div class="card-body p-0">
-                <h5></h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
+                <h5>Lovely community</h5>
+                <p class="card-text">Join our wonderful community and enhance your learning journey</p>
               </div>
             </div>
           </div>
@@ -360,7 +360,7 @@
               </div>
               <div class="card-body p-0">
                 <h5>Collect points and WIN!!</h5>
-                <p class="card-text">The more you learn, the more points you collect, you can use them on perks or to refer a friend for free</p>
+                <p class="card-text">The more you learn, the more points you get!!</p>
               </div>
             </div>
           </div>
