changed input to textarea

--- a/src/main/resources/static/test.html
+++ b/src/main/resources/static/test.html
@@ -86,7 +86,7 @@
               <div class="section-header">
                 <h2 class="section-title display-5 text-black">What Would you like to translate?</h2>
               </div>
-              <input id="testinput" type="text">
+              <textarea id="testinput" type="text"></textarea>
               <button type="button" class="btn btn-secondary btn-group-sm"
                 onclick="getresponse()">Translate</button>
               <select class="form-select" id="languages" name="languages">
