--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -68,7 +68,7 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle pe-3" role="button" id="pages" data-bs-toggle="dropdown" aria-expanded="false">Languages</a>
                 <ul class="dropdown-menu border-0 p-3 rounded-0 shadow" aria-labelledby="pages">
-                  <li><a href="arabic.html" class="dropdown-item">Arabic </a></li>
+                  <li><a href="language.html" class="dropdown-item">Arabic </a></li>
                   <li><a href="english.html" class="dropdown-item">English</a></li>
                   <li><a href="chinese.html" class="dropdown-item">Chinese </a></li>
                   <li><a href="spanish.html" class="dropdown-item">Spanish</a></li>
@@ -165,7 +165,7 @@
           <div class="col-md-12">
             <div class="category-carousel swiper">
               <div class="swiper-wrapper">
-                <a href="arabic.html" class="nav-link swiper-slide text-center">
+                <a onclick="setLanguageName('Arabic'); 'language.html';" href="#" class="nav-link swiper-slide text-center">
                   <img src="images/category-thumb-1.jpg" class="rounded-circle" alt="Category Thumbnail">
                   <h4 class="fs-6 mt-3 fw-normal category-title">Arabic</h4>
                 </a>
@@ -423,5 +423,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="js/plugins.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/language.js"></script>
+
+
   </body>
 </html>
