--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -319,19 +319,19 @@
         <div class="col-md-12">
           <div class="category-carousel swiper">
             <div class="swiper-wrapper">
-              <a href="brianwiles.html" class="nav-link swiper-slide text-center">
+              <a onclick="setTutorName('Brian Wiles'); window.location.href = 'tutor.html';" href="#"class="nav-link swiper-slide text-center">
                 <img src="images/brian_wiles.jpg" class="rounded-circle" alt="Category Thumbnail">
                 <h4 class="fs-6 mt-3 fw-normal category-title">Brian Wiles</h4>
               </a>
-              <a href="lilihao.html" class="nav-link swiper-slide text-center">
+              <a onclick="setTutorName('Lili Hao'); window.location.href = 'tutor.html';" href="#"class="nav-link swiper-slide text-center">
                 <img src="images/Lili_hao.jpg" class="rounded-circle" alt="Category Thumbnail">
                 <h4 class="fs-6 mt-3 fw-normal category-title">Lili Hao</h4>
               </a>
-              <a href="emma.html" class="nav-link swiper-slide text-center">
+              <a onclick="setTutorName('Emma'); window.location.href = 'tutor.html';" href="#"class="nav-link swiper-slide text-center">
                 <img src="images/emma.jpg" class="rounded-circle" alt="Category Thumbnail">
                 <h4 class="fs-6 mt-3 fw-normal category-title">Emma</h4>
               </a>
-              <a href="japanesepod.html" class="nav-link swiper-slide text-center">
+               <a onclick="setTutorName('Japenese Pod'); window.location.href = 'tutor.html';" href="#"class="nav-link swiper-slide text-center">
                 <img src="images/Japenesepod.jpg" class="rounded-circle" alt="Category Thumbnail">
                 <h4 class="fs-6 mt-3 fw-normal category-title">Japanese Pod</h4>
               </a>
@@ -546,6 +546,7 @@
   <script src="js/plugins.js"></script>
   <script src="js/script.js"></script>
   <script src="js/language.js"></script>
+  <script src="js/tutor.js"></script>
 
 
 </body>
