fixed the issue woth japanese pod redirecting to the proper page

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -331,7 +331,7 @@
                 <img src="images/emma.jpg" class="rounded-circle" alt="Category Thumbnail">
                 <h4 class="fs-6 mt-3 fw-normal category-title">Emma</h4>
               </a>
-               <a onclick="setTutorName('Japenese Pod'); window.location.href = 'tutor.html';" href="#"class="nav-link swiper-slide text-center">
+              <a onclick="setTutorName('Japanese Pod'); window.location.href = 'tutor.html';" href="#"class="nav-link swiper-slide text-center">
                 <img src="images/Japenesepod.jpg" class="rounded-circle" alt="Category Thumbnail">
                 <h4 class="fs-6 mt-3 fw-normal category-title">Japanese Pod</h4>
               </a>
