adjusted page reference for the translate page

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -166,7 +166,7 @@
               </ul>
             </li>
             <li class="nav-item active">
-              <a href="test.html" class="nav-link">Translator</a>
+              <a href="translate.html" class="nav-link">Translator</a>
             </li>
           </ul>
         </div>
