--- a/src/main/resources/static/translate.html
+++ b/src/main/resources/static/translate.html
@@ -82,11 +82,10 @@
       <div class="bg-secondary text-light py-5 my-5 bg-success">
         <div class="container">
           <div class="row justify-content-center">
-            <div class="col-md-5 p-3">
+            <div class="col-md-4 p-3">
               <div class="section-header">
                 <h2 class="section-title display-5 text-black">What Would you like to translate?</h2>
               </div>
-              <textarea id="testinput" type="text"></textarea>
               <button type="button" class="btn btn-secondary btn-group-sm"
                 onclick="getresponse()">Translate</button>
               <select class="form-select" id="languages" name="languages">
@@ -235,6 +234,16 @@
                 <option value="zu">Zulu - isiZulu</option>
               </select>
             </div>
+
+
+            <div class="col-md-4 p-3">
+              <p style="color: black;">Your Text here: </p>
+              <textarea id="testinput" type="text" placeholder="Write Anything"></textarea>
+              <p style="color: black;">Output: </p>
+              <textarea id="airesponse" placeholder="....."></textarea>
+            </div>
+
+
           </div>
         </div>
       </div>
