Adjusted reference to login page

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -174,7 +174,7 @@
         <div class="col-sm-8 col-lg-2 d-flex gap-5 align-items-center justify-content-center justify-content-sm-end">
           <ul class="d-flex justify-content-end list-unstyled m-0">
             <li>
-              <a href="#" class="p-2 mx-1">
+              <a href="login.html" class="p-2 mx-1">
                 <svg width="24" height="24">
                   <use xlink:href="#user"></use>
                 </svg>
@@ -196,7 +196,7 @@
               class="fw-bold">Master</span></h2>
           <p style="color: #000;" class="fs-4">The platform to assist your journey.</p>
           <div class="d-flex gap-3">
-            <a href="#" class="btn btn-dark text-uppercase fs-6 rounded-pill px-4 py-3 mt-3">Join Now</a>
+            <a href="login.html" class="btn btn-dark text-uppercase fs-6 rounded-pill px-4 py-3 mt-3">Join Now</a>
           </div>
           <div class="row my-5">
             <div class="col">
