added script to fetch roles and append to the selector options

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -17,6 +17,9 @@
         <input type="text" id="signupName" placeholder="Full name" required />
         <input type="email" id="signupEmail" placeholder="Email address" required />
         <input type="password" id="signupPassword" placeholder="Password" required />
+        <select class="form-select" id="roles" name="roles">
+          <option>Select a role</option>
+        </select>
         <div class="checkbox">
           <input type="checkbox" id="signupCheck" />
           <label for="signupCheck">I accept all terms & conditions</label>
@@ -27,13 +30,17 @@
     <div class="form login">
       <header>Login</header>
       <form id="loginForm">
-        <input type="text" id="loginUserName" placeholder="Username you sucker" required />
+        <input type="text" id="loginUserName" placeholder="User Name" required />
         <input type="password" id="loginPassword" placeholder="Password" required />
         <a href="#">Forgot password?</a>
         <input type="submit" value="Login" />
       </form>
     </div>
     <script>
+      window.onload = async function rolesFetch() {
+        await getRoles();
+      };
+
       const wrapper = document.querySelector(".wrapper"),
         signupHeader = document.querySelector(".signup header"),
         loginHeader = document.querySelector(".login header");
@@ -85,7 +92,12 @@
         const email = document.getElementById('signupEmail').value;
         const password = document.getElementById('signupPassword').value;
         const termsAccepted = document.getElementById('signupCheck').checked;
-
+        //let selectedOption = selectorElement.innerText
+        let selectedOption = document.getElementById("roles").value;
+        if(selectedOption === "Select a role"){
+          alert('A valid role must be selected.');
+          return;
+        }
         if (!termsAccepted) {
           alert('You must accept the terms and conditions.');
           return;
@@ -93,8 +105,10 @@
 
         const signupData = {
           name: name,
+          userName: name,
           email: email,
           password: password,
+          role: selectedOption
         };
 
         fetch('http://localhost:8080/user/register', {
@@ -106,18 +120,35 @@
         })
           .then(response => response.json())
           .then(data => {
-            if (data.success) {
-              alert('Signup successful!');
-              // Redirect or handle success logic
-            } else {
-              alert('Signup failed: ' + data.message);
-            }
+
+            alert('Signup successful!');
+            // Redirect or handle success logic
+
           })
           .catch((error) => {
             console.error('Error:', error);
             alert('An error occurred during signup.');
           });
       });
+    </script>
+
+    <script>
+      async function getRoles() {
+        let response = await fetch("http://localhost:8080/user/roles")
+          .then((response) => response.json())
+
+        await response.forEach(element => {
+          let selectorElement = document.getElementById("roles");
+          const role = document.createElement("option");
+          role.innerHTML = (element);
+          role.setAttribute('id', element)
+          selectorElement.append(role);
+        });
+
+        return response;
+      }
+
+
     </script>
   </section>
 </body>
