Adjusted background colours and style

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -159,14 +159,14 @@
               <a class="nav-link dropdown-toggle pe-3" role="button" id="pages" data-bs-toggle="dropdown"
                 aria-expanded="false">Languages</a>
               <ul class="dropdown-menu border-0 p-3 rounded-0 shadow" aria-labelledby="pages">
-                <li><a href="language.html" class="dropdown-item">Arabic </a></li>
-                <li><a href="english.html" class="dropdown-item">English</a></li>
-                <li><a href="chinese.html" class="dropdown-item">Chinese </a></li>
-                <li><a href="spanish.html" class="dropdown-item">Spanish</a></li>
+                <li><a href="language.html" class="dropdown-item">Java</a></li>
+                <li><a href="language.html" class="dropdown-item">JavaScript</a></li>
+                <li><a href="language.html" class="dropdown-item">C++</a></li>
+                <li><a href="language.html" class="dropdown-item">C#</a></li>
               </ul>
             </li>
             <li class="nav-item active">
-              <a href="translate.html" class="nav-link">Translator</a>
+              <a href="translate.html" class="nav-link">AI Asistant</a>
             </li>
           </ul>
         </div>
@@ -192,7 +192,7 @@
     <div class="container-lg">
       <div class="row">
         <div class="col-lg-6 pt-5 mt-5">
-          <h2 class="display-1 ls-1"><span class="fw-bold text-primary">Language</span> Made easy to <span
+          <h2 class="display-1 ls-1"><span style="color: #6db593;" class="fw-bold">Programming</span> Made easy to <span
               class="fw-bold">Master</span></h2>
           <p style="color: #000;" class="fs-4">The platform to assist your journey.</p>
           <div class="d-flex gap-3">
@@ -237,7 +237,7 @@
       <div class="row row-cols-1 row-cols-sm-3 row-cols-lg-3 g-0 justify-content-center">
 
         <div class="col">
-          <div class="card border-0 bg-success rounded-0 p-4 text-light">
+          <div style="background-color: #6db593;" class="card border-0 rounded-0 p-4 text-light">
             <div class="row">
               <div class="col-md-3 text-center">
                 <svg width="60" height="60">
@@ -347,7 +347,7 @@
   <section>
     <div class="container-lg">
 
-      <div class="bg-secondary text-light py-5 my-5 bg-success">
+      <div class="custom-bg py-5 my-5">
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-md-5 p-3">
@@ -386,8 +386,7 @@
 
   <section class="pb-4 my-4">
     <div class="container-lg">
-
-      <div class="bg-success pt-5 rounded-5">
+      <div class="custom-bg py-5 my-5">
         <div class="container">
           <div class="row justify-content-center align-items-center">
             <div class="col-md-4">
