--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -166,7 +166,10 @@
               </ul>
             </li>
             <li class="nav-item active">
-              <a href="translate.html" class="nav-link">AI Asistant</a>
+              <a href="assistant.html" class="nav-link">AI Asistant</a>
+            </li>
+            <li class="nav-item active">
+              <a href="account.html" class="nav-link">Account</a>
             </li>
           </ul>
         </div>
