--- a/src/main/resources/static/assistant.html
+++ b/src/main/resources/static/assistant.html
@@ -61,6 +61,9 @@
             <li class="nav-item active">
               <a href="assistant.html" class="nav-link">Ai assistant</a>
             </li>
+            <li class="nav-item active">
+              <a href="account.html" class="nav-link">Account</a>
+            </li>
           </ul>
         </div>
         
