--- a/src/main/resources/static/assistant.html
+++ b/src/main/resources/static/assistant.html
@@ -378,6 +378,6 @@
   <script src="js/plugins.js"></script>
   <script src="js/script.js"></script>
 </body>
-<script src="js/translate.js"></script>
+<script src="js/assistant.js"></script>
 
 </html>
