Adjusted jwt token expiration time and adjusted the return in the account page to return account name

--- a/src/main/resources/static/account.html
+++ b/src/main/resources/static/account.html
@@ -338,8 +338,8 @@
             function checkUser(token) {
                 const arrayToken = token.split('.');
                 const tokenPayload = JSON.parse(atob(arrayToken[1]));
+                return tokenPayload.sub;
             }
-
             console.log(checkUser(token));
         </script>
 
