--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -175,6 +175,7 @@
         </div>
 
         <div class="col-sm-8 col-lg-2 d-flex gap-5 align-items-center justify-content-center justify-content-sm-end">
+          <span id="addLogOutHere"></span>
           <ul class="d-flex justify-content-end list-unstyled m-0">
             <li>
               <a href="login.html" class="p-2 mx-1">
@@ -277,23 +278,28 @@
         <div class="col-md-12">
           <div class="category-carousel swiper">
             <div class="swiper-wrapper">
-              <a onclick="setLanguageName('Arabic'); window.location.href = 'language.html';" href="#"class="nav-link swiper-slide text-center">
+              <a onclick="setLanguageName('Arabic'); window.location.href = 'language.html';" href="#"
+                class="nav-link swiper-slide text-center">
                 <img src="images/category-thumb-1.jpg" class="rounded-circle" alt="Category Thumbnail">
                 <h4 class="fs-6 mt-3 fw-normal category-title">Arabic</h4>
               </a>
-              <a onclick="setLanguageName('Chinese'); window.location.href = 'language.html';" href="#"class="nav-link swiper-slide text-center">
+              <a onclick="setLanguageName('Chinese'); window.location.href = 'language.html';" href="#"
+                class="nav-link swiper-slide text-center">
                 <img src="images/category-thumb-2.jpg" class="rounded-circle" alt="Category Thumbnail">
                 <h4 class="fs-6 mt-3 fw-normal category-title">Chinese</h4>
               </a>
-              <a onclick="setLanguageName('English'); window.location.href = 'language.html';" href="#"class="nav-link swiper-slide text-center">
+              <a onclick="setLanguageName('English'); window.location.href = 'language.html';" href="#"
+                class="nav-link swiper-slide text-center">
                 <img src="images/category-thumb-3.jpg" class="rounded-circle" alt="Category Thumbnail">
                 <h4 class="fs-6 mt-3 fw-normal category-title">English</h4>
               </a>
-              <a onclick="setLanguageName('Spanish'); window.location.href = 'language.html';" href="#"class="nav-link swiper-slide text-center">
+              <a onclick="setLanguageName('Spanish'); window.location.href = 'language.html';" href="#"
+                class="nav-link swiper-slide text-center">
                 <img src="images/category-thumb-4.jpg" class="rounded-circle" alt="Category Thumbnail">
                 <h4 class="fs-6 mt-3 fw-normal category-title">Spanish</h4>
               </a>
-              <a onclick="setLanguageName('Japanese'); window.location.href = 'language.html';" href="#"class="nav-link swiper-slide text-center">
+              <a onclick="setLanguageName('Japanese'); window.location.href = 'language.html';" href="#"
+                class="nav-link swiper-slide text-center">
                 <img src="images/category-thumb-5.jpg" class="rounded-circle" alt="Category Thumbnail">
                 <h4 class="fs-6 mt-3 fw-normal category-title">Japanese</h4>
               </a>
@@ -322,19 +328,23 @@
         <div class="col-md-12">
           <div class="category-carousel swiper">
             <div class="swiper-wrapper">
-              <a onclick="setTutorName('Brian Wiles'); window.location.href = 'tutor.html';" href="#"class="nav-link swiper-slide text-center">
+              <a onclick="setTutorName('Brian Wiles'); window.location.href = 'tutor.html';" href="#"
+                class="nav-link swiper-slide text-center">
                 <img src="images/brian_wiles.jpg" class="rounded-circle" alt="Category Thumbnail">
                 <h4 class="fs-6 mt-3 fw-normal category-title">Brian Wiles</h4>
               </a>
-              <a onclick="setTutorName('Lili Hao'); window.location.href = 'tutor.html';" href="#"class="nav-link swiper-slide text-center">
+              <a onclick="setTutorName('Lili Hao'); window.location.href = 'tutor.html';" href="#"
+                class="nav-link swiper-slide text-center">
                 <img src="images/Lili_hao.jpg" class="rounded-circle" alt="Category Thumbnail">
                 <h4 class="fs-6 mt-3 fw-normal category-title">Lili Hao</h4>
               </a>
-              <a onclick="setTutorName('Emma'); window.location.href = 'tutor.html';" href="#"class="nav-link swiper-slide text-center">
+              <a onclick="setTutorName('Emma'); window.location.href = 'tutor.html';" href="#"
+                class="nav-link swiper-slide text-center">
                 <img src="images/emma.jpg" class="rounded-circle" alt="Category Thumbnail">
                 <h4 class="fs-6 mt-3 fw-normal category-title">Emma</h4>
               </a>
-              <a onclick="setTutorName('Japanese Pod'); window.location.href = 'tutor.html';" href="#"class="nav-link swiper-slide text-center">
+              <a onclick="setTutorName('Japanese Pod'); window.location.href = 'tutor.html';" href="#"
+                class="nav-link swiper-slide text-center">
                 <img src="images/Japenesepod.jpg" class="rounded-circle" alt="Category Thumbnail">
                 <h4 class="fs-6 mt-3 fw-normal category-title">Japanese Pod</h4>
               </a>
@@ -549,6 +559,29 @@
   <script src="js/script.js"></script>
   <script src="js/language.js"></script>
   <script src="js/tutor.js"></script>
+
+  <script>
+
+window.onload = async function logOut() {
+    if (localStorage.getItem('token') === null) {
+    }
+    else {
+
+      await addLogout();
+
+    }
+  }
+
+  async function logout() {
+    localStorage.removeItem("token");
+    window.location = "login.html";
+  }
+
+  async function addLogout() {
+    const divElement = document.getElementById('addLogOutHere');
+    divElement.innerHTML = '<button onclick="logout()"> <span class="button_top"> Log Out </span></button>'
+  }
+  </script>
 
 
 </body>
